<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensor Examples</string>
    <string name="title_sensor_detail">Sensor Detail</string>
    <string name="accelerometer_description">Measures the acceleration force in m\s2 that is applied to a device on all three physical axes (x, y, and z), including the force of gravity.</string>
    <string name="gravity_description">The gravity sensor provides a three dimensional vector indicating the direction and magnitude of gravity</string>
    <string name="gyroscop_description">The gyroscope measures the rate or rotation in rad/s around a device\'s x, y, and z axis. </string>
    <string name="light_description">Measures the ambient light level (illumination) in lx.</string>
    <string name="linear_accelerometer_description">Measures the acceleration force in m/s2 that is applied to a device on all three physical axes (x, y, and z), excluding the force of gravity.</string>
    <string name="magnetic_field_description">Measures the ambient geomagnetic field for all three physical axes (x, y, z) in μT.</string>
    <string name="orientation_description">Measures degrees of rotation that a device makes around all three physical axes (x, y, z)</string>
    <string name="rotation_vector_description">Measures the orientation of a device by providing the three elements of the device\'s rotation vector.</string>
    <string name="signif_motion_description">Significant Motion</string>
    <string name="gps_description">GPS sensor uses the GPS sensor in the device to determine the location of the device.</string>
    <string name="network_loc_description">The Network Location </string>
    <string name="action_header">Available Actions</string>
    <string name="result_header">Results</string>

    <string name="read_button">Read Sensor</string>
    <string name="background_button">Enable Background Reading</string>
    <string name="title_activity_main_menu">Sensor Examples</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="overview">Overview</string>
    <string name="overview_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porta turpis ornare, pretium nunc vel, feugiat erat. Fusce eget vestibulum nisi. Cras in porttitor velit, at imperdiet est. </string>
    <string name="overview_icon">Overview Icon</string>
    <string name="sensor">Sensor</string>
    <string name="sensor_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porta turpis ornare, pretium nunc vel, feugiat erat. Fusce eget vestibulum nisi. Cras in porttitor velit, at imperdiet est.</string>
    <string name="augreality">Augmented Reality</string>
    <string name="augreality_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porta turpis ornare, pretium nunc vel, feugiat erat. Fusce eget vestibulum nisi. Cras in porttitor velit, at imperdiet est.</string>
    <string name="activity">Activity Recognition</string>
    <string name="activity_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porta turpis ornare, pretium nunc vel, feugiat erat. Fusce eget vestibulum nisi. Cras in porttitor velit, at imperdiet est.</string>
    <string name="contextcomp">Contextual Computing</string>
    <string name="contextcomp_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porta turpis ornare, pretium nunc vel, feugiat erat. Fusce eget vestibulum nisi. Cras in porttitor velit, at imperdiet est.</string>
    <string name="title_activity_augmented_reality_main">AugmentedRealityMain</string>
    <string name="hello_world">Hello world!</string>
</resources>
