<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="org.kyledef.sensorexamples.ui.MainMenu$PlaceholderFragment"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/app_overview"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="10dp"
            card_view:cardElevation="5dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:onClick="overView"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/overview_icon"
                    android:contentDescription="Overview Icon"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginRight="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/overview"
                        android:id="@+id/textView"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:textSize="@dimen/heading_size" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#FFCC00"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview_description"
                        android:id="@+id/textView2"
                        android:layout_gravity="top|left"
                        android:layout_margin="2dp"
                        android:textSize="@dimen/text_size" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/app_sensors"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="10dp"
            card_view:cardElevation="5dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:onClick="sensors"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/sensor_icon"
                    android:contentDescription="@string/overview_icon"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginRight="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/sensor"
                        android:id="@+id/sensor_heading"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:textSize="@dimen/heading_size" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#FFCC00"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sensor_description"
                        android:id="@+id/sensor_description"
                        android:layout_gravity="top|left"
                        android:layout_margin="2dp"
                        android:textSize="@dimen/text_size" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/app_augreality"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="10dp"
            card_view:cardElevation="5dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:onClick="augReality"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/aug_icon"
                    android:contentDescription="Augmented Reality Icon"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginRight="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/augreality"
                        android:id="@+id/augreality"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:textSize="@dimen/heading_size" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#FFCC00"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/augreality_description"
                        android:id="@+id/augreality_description"
                        android:layout_gravity="top|left"
                        android:layout_margin="2dp"
                        android:textSize="@dimen/text_size" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/app_activity"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="10dp"
            card_view:cardElevation="5dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:onClick="activity"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/activity_icon"
                    android:contentDescription="Activity Icon"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginRight="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/activity"
                        android:id="@+id/activity"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:textSize="@dimen/heading_size" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#FFCC00"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_description"
                        android:id="@+id/activity_description"
                        android:layout_gravity="top|left"
                        android:layout_margin="2dp"
                        android:textSize="@dimen/text_size" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/app_contextcomp"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="10dp"
            card_view:cardElevation="5dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:onClick="overView"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/contextcomp_icon"
                    android:contentDescription="Contextcomp Icon"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginRight="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/contextcomp"
                        android:id="@+id/contextcomp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:textSize="@dimen/heading_size" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#FFCC00"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contextcomp_description"
                        android:id="@+id/contextcomp_description"
                        android:layout_gravity="top|left"
                        android:layout_margin="2dp"
                        android:textSize="@dimen/text_size" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>